<resources>
    <string name="app_name">White Fly Counter</string>
    <string name="action_settings">Settings</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status">Place a cassava leaft inside the viewfinder rectangle to scan it.</string>
    <string name="new_field_button">New Field</string>
    <string name="edit_field_button">Edit Field (%s)</string>
    <string name="edit_field">Edit Field (0)</string>
    <string name="new_survey_button">New Survey</string>
    <string name="edit_survey_button">Edit Survey</string>
    <string name="send_survey_button">Send Survey</string>
    <string name="preferences_button">Preferences</string>
    <string name="aidevurl">www.air.ug</string>
    <string name="textViewEmail">Email</string>
    <string name="textViewPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="fob_logo_descripton">Flock of Birds</string>
    <string name="btn_fill_in_blank_questionnaire">Fill in blank Field</string>
    <string name="btn_edit_saved_story">Edit Saved Story</string>
    <string name="btn_send_finished_stories">Send Finished Story</string>
    <string name="protocol_mande_default">WHITEFLYCOUNTER</string>
    <string name="accept_location">Record Location</string>
    <string name="accuracy">Accuracy</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="add_another">Add Group</string>
    <string name="add_another_repeat">Add another \"%s\" group?</string>
    <string name="add_more">Add more</string>
    <string name="add_repeat">Add a new \"%s\" group?</string>
    <string name="add_repeat_no">Do Not Add</string>
    <string name="advance">forward to\nnext\nprompt</string>
    <string name="altitude">Altitude</string>
    <string name="audio_file_error">No audio file was specified.</string>
    <string name="audio_file_invalid">File: %s is not a valid audio file.</string>
    <string name="backup">backward to\nprevious\nprompt</string>
    <string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_field">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="cancel_saving_field">Cancel</string>
    <string name="cannot_edit_completed_field">This questionnaire cannot be edited once it has been marked as complete. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="default_server_url">URL</string>
    <string name="change_server_url">URL</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="completed_data">Complete (%s)</string>
    <string name="data">Saved Fields</string>
    <string name="data_saved_error">Sorry, field save failed!</string>
    <string name="data_saved_ok">Field successfully saved!</string>
    <string name="default_completed">Default to finalized</string>
    <string name="default_completed_summary">Mark field as finalized by default</string>
    <string name="delete_confirm">Delete %s field(s)?</string>
    <string name="delete_file">Delete Selected</string>
    <string name="delete_no">Do Not Delete</string>
    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
    <string name="delete_repeat_no">Cancel</string>
    <string name="delete_yes">Delete Fields</string>
    <string name="discard_answer">Remove response</string>
    <string name="discard_group">Remove group</string>
    <string name="download">Get Selected</string>
    <string name="remove_attachment">Remove </string>
    <string name="download_fields_result">Download Result</string>
    <string name="delete_attachments_result">Delete Attachment Result</string>
    <string name="downloading_data">Connecting to Server</string>
    <string name="do_not_change">Cancel</string>
    <string name="do_not_exit">Cancel</string>
    <string name="do_not_save">Ignore Changes</string>
    <string name="entering_repeat">Add Group</string>
    <string name="entering_repeat_ask">Add New Group?</string>
    <string name="list_fields_button">Go to Fields</string>
    <string name="enter_data">Fill Blank Field</string>
    <string name="select_field">Select a Field</string>
    <string name="enter_data_button">Fill Blank Field</string>
    <string name="get_field_settings_button">Get Field Settings</string>
    <string name="fill_in_blank_questionnaire_button">Fill In Blank Questionnaire</string>
    <string name="edit_saved_story_button">Edit Saved Story</string>
    <string name="send_finished_stories_button">Send Finished Stories</string>
    <string name="send_finished_stories">Sending Finished Stories...</string>
    <string name="error_occured">Error Occurred</string>
    <string name="fetching_field">Getting %1$s.\n\nField %2$s of %3$s field(s).</string>
    <string name="deleting_attachment">Deleting %1$s.\n\nAttachment %2$s of %3$s attachment(s).</string>
    <string name="fetching_field_settings">Fetching %1$s.\n\n%2$s %3$s of %4$s field setting.</string>
    <string name="file_deleted_error">Sorry, %1$s of %2$s selected field(s) failed to delete!</string>
    <string name="file_deleted_ok">%s field(s) successfully deleted!</string>
    <string name="file_delete_in_progress">Sorry, a field delete action is already in progress!</string>
    <string name="file_invalid">File: %s is invalid.</string>
    <string name="file_missing">File: %s is missing.</string>
    <string name="finished_disk_scan">Finished scanning. All fields loaded.</string>
    <string name="fields">Blank Fields</string>
    <string name="getting_location">Loading Location</string>
    <string name="get_barcode">Get Barcode</string>
    <string name="get_fields">Get All Fields</string>
    <string name="qa_attachment">Question Attacments</string>
    <string name="get_location">Record Location</string>
    <string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
    <string name="invalid_answer_error">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning">Go To Start</string>
    <string name="jump_to_end">Go To End</string>
    <string name="jump_to_previous">Go Up</string>
    <string name="latitude">Latitude</string>
    <string name="leave_repeat_yes">Do Not Add</string>
    <string name="leaving_repeat_ask">Add One More Group?</string>
    <string name="list_failed_with_error">Field listing failed. %s.</string>
    <string name="loading_field">Loading Field</string>
    <string name="adding_stories">Adding Stories</string>
    <string name="load_remote_field_error">Error Getting Field List</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
    <string name="location_accuracy">Accuracy is %1$s m</string>
    <string name="longitude">Longitude</string>
    <string name="main_menu">Main Menu</string>
    <string name="field_menu">Field Menu</string>
    <string name="main_menu_details">Whitefly Tracking Application!</string>
    <string name="manage_files">Delete Saved Field</string>
    <string name="mark_finished">Mark story as finalized</string>
    <string name="noselect_error">Sorry, you have not selected any fields!</string>
    <string name="no_connection">No network connection available</string>
    <string name="no_items_display">Nothing available to display.</string>
    <string name="no_items_display_fields">Nothing available to display.\n\nTry getting and filling out a blank field.</string>
    <string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved stories before sending.</string>
    <string name="no_items_display_drafts">Nothing available to display.\n\nTry saving drafted stories before editing.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Sorry, unable to parse field.</string>
    <string name="parse_legacy_fieldlist_failed">The server has not provided an available-fields document compatible with Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_fieldlist_failed">The server has not provided an available-fields document compatible with the OpenRosa version 1.0 standard: %s</string>
    <string name="password">Password</string>
    <string name="play_audio">Play Sound</string>
    <string name="play_video">Play Video</string>
    <string name="please_wait">Please wait a few moments.</string>
    <string name="please_wait_long">Please wait. This could take a few minutes.</string>
    <string name="quit_application">Exit %s</string>
    <string name="quit_entry">Save Story and Exit</string>
    <string name="refresh">Refresh</string>
    <string name="replace_barcode">Replace Barcode</string>
    <string name="replace_location">Replace Location</string>
    <string name="required_answer_error">Sorry, this response is required!</string>
    <string name="review_data">Edit Saved Field</string>
    <string name="review_data_button">Edit Saved Field (%s)</string>
    <string name="get_fields_button">Create New Field</string>
    <string name="saved_data">Incomplete (%s)</string>
    <string name="save_all_answers">Save Field</string>
    <string name="save_enter_data_description">You are at the end of %s.</string>
    <string name="saving_field">Saving Field</string>
    <string name="save_story">Save Story.</string>
    <string name="story_end">You are at the end of the story, please complete the following details and save.</string>
    <string name="sending_items">Sending %1$s of %2$s stories</string>
    <string name="edit_data">Edit Saved Story</string>
    <string name="send_data">Send Finalized Story</string>
    <string name="manage_fields_button">Delete Fields</string>
    <string name="reset_database_button">Reset System</string>
    <string name="edit_data_button">Edit Saved Story (%s)</string>
    <string name="send_data_button">Send Finished Story (%s)</string>
    <string name="select_field_button">Select Field (%s)</string>
    <string name="send_selected_data">Send Selected</string>
    <string name="server_auth_credentials">Please enter username and password for server:\n%s</string>
    <string name="server_requires_auth">Server Requires Authentication</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Server Settings</string>
    <string name="toggle_selected">Toggle All</string>
    <string name="trigger">OK. Please continue.</string>
    <string name="uploading_data">Sending Field</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="username">Username</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="general_preferences">General Settings</string>
    <string name="click_to_web">Tap to visit http://opendatakit.org</string>
    <string name="client">User Interface</string>
    <string name="show_splash">Show splash screen</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected splash image</string>
    <string name="default_splash_path">ODK Default</string>
</resources>