<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_alignParentTop="true">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:id="@+id/buttonholder">


    <Button
     android:id="@+id/toggle_button"
     android:text="@string/toggle_selected"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:textSize="16sp"
	 android:layout_weight="1"
     />

    <Button
    android:id="@+id/remove_button"
    android:text="@string/remove_attachment"
      android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:textSize="16sp"
android:layout_weight="1"   />
     
    <ImageButton
    android:id="@+id/camera_button"
      android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="7dp"
     android:src="@android:drawable/ic_menu_camera"
android:layout_weight="1"      />
    
     <ImageButton
    android:id="@+id/attachment_button"
      android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="7dp"
     android:src="@android:drawable/ic_menu_gallery"
android:layout_weight="1"      />


  </LinearLayout>


	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@+id/buttonholder"
		android:layout_alignParentTop="true" />

   <TextView
      android:id="@android:id/empty"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:text="@string/no_items_display"
      android:textSize="21sp"
      android:gravity="center"/>


</RelativeLayout>